--- a/knots-to-mph.html
+++ b/knots-to-mph.html
@@ -1,311 +1,163 @@
 <!DOCTYPE html>
-<html lang="en"><head> 
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/site.webmanifest" />
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Knots to MPH/KPH Converter</title>
-<meta content="Convert knots to miles per hour (MPH) or kilometers per hour (KPH) with this user-friendly and accessible tool." name="description"/>
-<meta content="Ugo Candido" name="author"/>
-<link href="https://calcdomain.com/knots-to-mph.html" rel="canonical"/>
-<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-<style>
-        :root {
-            --primary-color: #005A9C;
-            --background-color: #F8F9FA;
-            --text-color: #212529;
-            --border-color: #DEE2E6;
-            --success-color: #28a745;
-            --danger-color: #dc3545;
-            --font-sans-serif: 'Inter', sans-serif;
-            --container-max-width: 800px;
-        }
-
-        body {
-            font-family: var(--font-sans-serif);
-            background-color: var(--background-color);
-            color: var(--text-color);
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: var(--container-max-width);
-            margin: 0 auto;
-            padding: 1rem;
-        }
-
-        h1 {
-            font-size: 2rem;
-            color: var(--primary-color);
-        }
-
-        .calculator-container,
-        .results-container {
-            background-color: #fff;
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            padding: 1.5rem;
-            margin-top: 1rem;
-        }
-
-        .form-group {
-            margin-bottom: 1rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-        }
-
-        .form-control {
-            width: 100%;
-            padding: 0.5rem;
-            font-size: 1rem;
-            border: 1px solid var(--border-color);
-            border-radius: 4px;
-        }
-
-        .button {
-            background-color: var(--primary-color);
-            color: #fff;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            font-size: 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 1rem;
-        }
-
-        .button:hover {
-            background-color: #003f6e;
-        }
-
-        .result-item {
-            display: flex;
-            justify-content: space-between;
-            padding: 0.5rem 0;
-            border-bottom: 1px solid var(--border-color);
-        }
-
-        .result-value {
-            font-weight: bold;
-            color: var(--success-color);
-        }
-
-        .formula-box {
-            background-color: #e9ecef;
-            padding: 1rem;
-            border-radius: 4px;
-            margin: 1rem 0;
-            font-family: 'Source Code Pro', monospace;
-        }
-
-        .sr-only {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            padding: 0;
-            margin: -1px;
-            overflow: hidden;
-            clip: rect(0, 0, 0, 0);
-            white-space: nowrap;
-            border: 0;
-        }
-
-        .author-box {
-            font-size: 0.9rem;
-            color: #6c757d;
-            margin-top: 2rem;
-            border-top: 1px solid var(--border-color);
-            padding-top: 1rem;
-        }
-    </style>
-<script defer="">
-        document.addEventListener("DOMContentLoaded", function () {
-            const form = document.getElementById('converter-form');
-            form.addEventListener('submit', function (e) {
-                e.preventDefault();
-                const knots = parseFloat(document.getElementById('knots').value);
-
-                if (isNaN(knots) || knots < 0) {
-                    document.getElementById('knotsError').innerText = "Please enter a valid number of knots.";
-                    return;
-                } else {
-                    document.getElementById('knotsError').innerText = "";
-                }
-
-                const mph = knots * 1.15078;
-                const kph = knots * 1.852;
-
-                document.getElementById('mphResult').innerText = mph.toFixed(2) + ' MPH';
-                document.getElementById('kphResult').innerText = kph.toFixed(2) + ' KPH';
-            });
-        });
-    </script>
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebPage",
-  "name": "Knots to MPH/KPH Converter",
-  "description": "Convert knots to miles per hour (MPH) or kilometers per hour (KPH) with this user-friendly and accessible tool.",
-  "url": "https://calcdomain.com/knots-to-mph.html",
-  "author": {
-    "@type": "Person",
-    "name": "Ugo Candido"
-  },
-  "publisher": {
-    "@type": "Organization",
-    "name": "CalcDomain"
-  },
-  "mainEntity": {
-    "@type": "FAQPage",
-    "mainEntity": [
-      {
-        "@type": "Question",
-        "name": "What is a knot?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "A knot is a unit of speed equal to one nautical mile per hour, commonly used in maritime and aviation contexts."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How do I convert knots to MPH?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "To convert knots to miles per hour, multiply the speed in knots by 1.15078."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "How do I convert knots to KPH?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "To convert knots to kilometers per hour, multiply the speed in knots by 1.852."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Why is this conversion useful?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Converting knots to MPH or KPH is useful for understanding speed in different contexts, such as aviation and maritime navigation."
-        }
-      },
-      {
-        "@type": "Question",
-        "name": "Is this tool accurate?",
-        "acceptedAnswer": {
-          "@type": "Answer",
-          "text": "Yes, this tool uses precise conversion factors to ensure accuracy."
-        }
-      }
-    ]
-  }
-}
-  </script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<html lang="en">
+<head>
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Knots to MPH/KPH Converter</title>
+  <meta name="description" content="Convert knots to miles per hour (MPH) or kilometers per hour (KPH) instantly. Perfect for marine, aviation, and international speed conversions.">
+  <link rel="canonical" href="https://calcdomain.com/knots-to-mph.html"/>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="search.js" defer></script>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-900">
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <nav class="container mx-auto px-4 lg:px-6 py-4">
+      <div class="flex justify-between items-center">
+        <a href="index.html" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+        <div class="w-full max-w-md hidden md:block mx-8">
+          <div class="relative">
+            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-12 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" autocomplete="off">
+          </div>
+        </div>
+        <div class="hidden md:flex items-center space-x-6 text-sm">
+          <a href="search.html" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-label="Open menu">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobile-menu" class="md:hidden mt-4 hidden">
+        <div class="space-y-2">
+          <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="container mx-auto px-4 lg:px-6 py-10">
+    <div class="flex flex-col lg:flex-row gap-8">
+      <section class="w-full lg:w-2/3">
+        <nav class="text-sm text-gray-600 mb-4" aria-label="Breadcrumb">
+          <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
+          <a href="math-conversions.html" class="hover:text-blue-600">Math & Conversion Calculators</a> &raquo;
+          <span class="text-gray-900">Knots to MPH/KPH</span>
+        </nav>
+        <div class="bg-white p-6 rounded-lg shadow-md">
+          <h1 class="text-3xl font-extrabold text-gray-900 mb-2">Knots to MPH/KPH Converter</h1>
+          <p class="text-gray-600 mb-6">Convert knots to miles per hour (MPH) and kilometers per hour (KPH). Ideal for navigation, marine, aviation, and scientific speed conversions.</p>
 
-<a class="sr-only" href="#main-content">Skip to main content</a>
-<main class="container" id="main-content">
-<h1>Knots to MPH/KPH Converter</h1>
-<p>Use this calculator to convert speeds in knots to miles per hour (MPH) and kilometers per hour (KPH). Perfect for mariners, aviators, and anyone needing quick conversions.</p>
-<section class="calculator-container">
-<h2>Converter</h2>
-<form aria-labelledby="calculator-heading" id="converter-form">
-<div class="form-group">
-<label for="knots">Knots *</label>
-<input aria-describedby="knotsError" aria-required="true" class="form-control" id="knots" type="number"/>
-<div aria-live="polite" class="error-message" id="knotsError" role="alert"></div>
-</div>
-<button class="button" type="submit">Convert</button>
-</form>
-</section>
-<section class="results-container">
-<h2>Results</h2>
-<div class="result-item">
-<span>MPH:</span>
-<span class="result-value" id="mphResult">0.00 MPH</span>
-</div>
-<div class="result-item">
-<span>KPH:</span>
-<span class="result-value" id="kphResult">0.00 KPH</span>
-</div>
-</section>
-<section>
-<h2>Data Source and Methodology</h2>
-<p>Data is derived from standard conversion rates commonly used in navigation and aviation. All calculations are based on the conversion factor: 1 knot = 1.15078 miles per hour and 1.852 kilometers per hour.</p>
-</section>
-<section>
-<h2>The Formula Explained</h2>
-<div class="formula-box">
-<p><strong>MPH Conversion:</strong> <code>MPH = Knots × 1.15078</code></p>
-<p><strong>KPH Conversion:</strong> <code>KPH = Knots × 1.852</code></p>
-</div>
-</section>
-<section>
-<h2>Glossary of Terms</h2>
-<ul>
-<li><strong>Knots:</strong> A unit of speed equal to one nautical mile per hour.</li>
-<li><strong>MPH:</strong> Miles per hour, a unit of speed expressing the number of miles traveled in one hour.</li>
-<li><strong>KPH:</strong> Kilometers per hour, a metric unit of speed expressing the number of kilometers traveled in one hour.</li>
-</ul>
-</section>
-<section>
-<h2>How It Works: A Step-by-Step Example</h2>
-<p>If you input 10 knots, the conversion to MPH will be 10 × 1.15078 = 11.51 MPH, and to KPH will be 10 × 1.852 = 18.52 KPH.</p>
-</section>
-<section>
-<h2>Frequently Asked Questions (FAQ)</h2>
-<div>
-<h3>What is a knot?</h3>
-<p>A knot is a unit of speed equal to one nautical mile per hour, commonly used in maritime and aviation contexts.</p>
-<h3>How do I convert knots to MPH?</h3>
-<p>To convert knots to miles per hour, multiply the speed in knots by 1.15078.</p>
-<h3>How do I convert knots to KPH?</h3>
-<p>To convert knots to kilometers per hour, multiply the speed in knots by 1.852.</p>
-<h3>Why is this conversion useful?</h3>
-<p>Converting knots to MPH or KPH is useful for understanding speed in different contexts, such as aviation and maritime navigation.</p>
-<h3>Is this tool accurate?</h3>
-<p>Yes, this tool uses precise conversion factors to ensure accuracy.</p>
-</div>
-</section>
-<div class="author-box">
-<p>
-                Tool developed by <strong>Ugo Candido</strong>. Content reviewed by <strong>CalcDomain Expert Team</strong>.
-                <br/>
-                Last reviewed for accuracy on: October 1, 2023.
+          <form id="converter-form" class="space-y-6" autocomplete="off">
+            <div>
+              <label for="knots" class="block text-sm font-medium text-gray-700 mb-2">Speed in Knots (kt)</label>
+              <input id="knots" type="number" step="any" class="w-full px-4 py-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter knots" required>
+              <div id="knotsError" class="text-xs text-red-600 mt-1" aria-live="polite"></div>
+            </div>
+            <div class="bg-blue-50 p-6 rounded-lg border border-blue-200 flex flex-col gap-2 items-center">
+              <div class="w-full">
+                <div class="text-xs text-gray-500 mb-1">Miles per Hour (MPH)</div>
+                <div id="mphResult" class="text-2xl font-bold text-blue-600">0.00 MPH</div>
+              </div>
+              <div class="w-full mt-3">
+                <div class="text-xs text-gray-500 mb-1">Kilometers per Hour (KPH)</div>
+                <div id="kphResult" class="text-2xl font-bold text-blue-600">0.00 KPH</div>
+              </div>
+            </div>
+          </form>
+          <section class="mt-10 prose">
+            <h2>Formulas</h2>
+            <div class="bg-gray-100 p-3 rounded font-mono text-center border text-lg my-2">
+              <code>MPH = Knots × 1.15078<br>KPH = Knots × 1.852</code>
+            </div>
+            <p>
+              1 knot = 1.15078 mph and = 1.852 kph. Multiply knots by the appropriate factor.
             </p>
-</div>
-</main>
-
-
-
-```
-
-
-</body></html>
+            <h2>Example Calculation</h2>
+            <ul>
+              <li>10 knots × 1.15078 = 11.51 mph</li>
+              <li>10 knots × 1.852 = 18.52 kph</li>
+            </ul>
+            <h2>Common Use Cases</h2>
+            <ul>
+              <li><strong>Navigation:</strong> Boat or aircraft speed in knots can be quickly compared to mph or kph.</li>
+              <li><strong>Weather and wind:</strong> Meteorological speeds, wind warnings, and forecasts.</li>
+              <li><strong>Travel:</strong> Maritime, international flight briefings, and chart plotting.</li>
+            </ul>
+            <h2>Frequently Asked Questions</h2>
+            <details>
+              <summary>How do you convert knots to mph and kph?</summary>
+              <p>Multiply by 1.15078 for mph, and by 1.852 for kph.</p>
+            </details>
+            <details>
+              <summary>Where is this conversion useful?</summary>
+              <p>In navigation, weather forecasting, flight planning, and whenever speed data is in knots but you need familiar values (mph/kph).</p>
+            </details>
+            <h2>Data Source</h2>
+            <p>The conversion factors are internationally recognized: 1 knot = 1.15078 miles/hour = 1.852 kilometers/hour.</p>
+          </section>
+          <div class="mt-8 pt-6 border-t border-gray-200 text-sm text-gray-600">
+            Tool by <strong>Ugo Candido</strong>. Last reviewed: 2025.
+          </div>
+        </div>
+      </section>
+      <aside class="w-full lg:w-1/3">
+        <div class="sticky top-24 space-y-6">
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Quick Reference</h2>
+            <ul class="space-y-2 text-sm text-gray-600">
+              <li>1 knot = 1.15078 mph</li>
+              <li>1 knot = 1.852 kph</li>
+              <li>5 knots = 5.754 mph = 9.26 kph</li>
+              <li>10 knots = 11.51 mph = 18.52 kph</li>
+            </ul>
+          </div>
+          <div class="bg-white p-6 rounded-lg shadow-md">
+            <h2 class="text-lg font-semibold text-gray-900 mb-3">Related Tools</h2>
+            <ul class="space-y-2 text-sm text-blue-600">
+              <li><a href="mph-to-knots.html" class="hover:underline">MPH to Knots</a></li>
+              <li><a href="mph-to-kph.html" class="hover:underline">MPH to KPH</a></li>
+              <li><a href="meters-per-second-to-mph.html" class="hover:underline">m/s to MPH</a></li>
+              <li><a href="feet-per-second-to-mph.html" class="hover:underline">ft/s to MPH</a></li>
+            </ul>
+          </div>
+        </div>
+      </aside>
+    </div>
+  </main>
+  <footer class="bg-white border-t mt-12">
+    <div class="container mx-auto px-6 py-8 text-center text-gray-600 text-sm">
+      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="about.html" class="hover:text-blue-600">About</a>
+        <a href="contact.html" class="hover:text-blue-600">Contact</a>
+        <a href="privacy.html" class="hover:text-blue-600">Privacy</a>
+        <a href="terms.html" class="hover:text-blue-600">Terms</a>
+      </div>
+    </div>
+  </footer>
+  <script>
+    document.getElementById('converter-form').addEventListener('submit', function(e){
+      e.preventDefault();
+      const knots = parseFloat(document.getElementById('knots').value);
+      let error = "";
+      if(isNaN(knots) || knots < 0) { error = "Please enter a valid non-negative knots value."; }
+      document.getElementById('knotsError').textContent = error;
+      if(error) return;
+      document.getElementById('mphResult').textContent = (knots*1.15078).toFixed(2) + " MPH";
+      document.getElementById('kphResult').textContent = (knots*1.852).toFixed(2) + " KPH";
+    });
+    document.getElementById('mobile-menu-toggle')?.addEventListener('click', () => {
+      const menu = document.getElementById('mobile-menu');
+      menu?.classList.toggle('hidden');
+    });
+  </script>
+</body>
+</html>
