--- a/sito_modificato/subcategories/calorie.html
+++ b/sito_modificato/subcategories/calorie.html
@@ -130,15 +130,27 @@
   <script defer src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body class="bg-gray-50 text-gray-900">
-  <header class="bg-white border-b">
-    <nav class="container mx-auto px-4 lg:px-6 py-4 flex items-center justify-between">
-      CalcDomain
-      <div class="hidden md:flex gap-6 text-sm">
-        Search
-        Categories
-      </div>
-    </nav>
-  </header>
+      <!-- Header (from index) -->
+    <header class="bg-white border-b">
+      <nav class="container mx-auto px-4 lg:px-6 py-4">
+        <div class="flex items-center justify-between">
+          <a href="https://calcdomain.com" class="text-2xl font-extrabold text-blue-600">CalcDomain</a>
+          <div class="hidden md:flex items-center gap-6 text-sm">
+            <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+          </div>
+          <button id="mobile-menu-toggle" class="md:hidden p-2 click-48" aria-label="Open menu">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+          </button>
+        </div>
+        <div id="mobile-menu" class="md:hidden mt-3 hidden">
+          <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </nav>
+    </header>
 
   <main class="container mx-auto px-4 lg:px-6 py-8">
     <!-- 1. H1 -->
