--- a/sito_modificato/subcategories/taxes.html
+++ b/sito_modificato/subcategories/taxes.html
@@ -427,19 +427,27 @@
 
 <body class="bg-gray-50 text-gray-800">
   <!-- Header -->
-  <header class="bg-white shadow-sm sticky top-0 z-50" role="banner">
-    <nav class="container mx-auto px-4 lg:px-6 py-4 flex items-center justify-between" aria-label="Primary">
-      <a href="https://calcdomain.com" class="text-2xl font-bold text-blue-600">CalcDomain</a>
-      <div class="w-full max-w-md hidden md:block">
-        <label for="site-search" class="sr-only">Search calculators</label>
-        <div class="relative">
-          <input id="site-search" type="search" autocomplete="off" placeholder="Search for a calculator…" class="w-full py-2 px-4 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.8-4.8M10.5 18a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15z"></svg>
+      <!-- Header (from index) -->
+    <header class="bg-white border-b">
+      <nav class="container mx-auto px-4 lg:px-6 py-4">
+        <div class="flex items-center justify-between">
+          <a href="https://calcdomain.com" class="text-2xl font-extrabold text-blue-600">CalcDomain</a>
+          <div class="hidden md:flex items-center gap-6 text-sm">
+            <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600">Categories</a>
+          </div>
+          <button id="mobile-menu-toggle" class="md:hidden p-2 click-48" aria-label="Open menu">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+            </svg>
+          </button>
         </div>
-      </div>
-      <div class="hidden md:block" aria-hidden="true"></div>
-    </nav>
-  </header>
+        <div id="mobile-menu" class="md:hidden mt-3 hidden">
+          <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+          <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+        </div>
+      </nav>
+    </header>
 
   <main id="main" class="container mx-auto px-4 py-8" role="main">
     <div class="flex flex-col lg:flex-row gap-8">
